# wetg

./: LICENSE  README.md  install.sh  mybot.wetg  pyproject.toml  wetg.py  wetg.sh
wetg/: __init__.py  __main__.py  interpreter.py  runner.py
